change endpoint /payment/:id/review from patch to put
