# backend/openapi.yaml
@@ -94,8 +94,35 @@ paths:
         '401':
           description: Unauthorized
 
+  /payment/size:
+    get:
+      summary: Get total payment
+      tags:
+        - Total Payment
+      parameters:
+        - in: query
+          name: status
+          schema:
+            type: string
+            enum: [ failed, completed, processing ]
+          description: Parameter for status payments
+      security:
+        - bearerAuth: [ ]
+      responses:
+        '200':
+          description: Total Payment
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  count:
+                    type: integer
+        '401':
+          description: Unauthorized
+
   /payment/{id}/review:
-    patch:
+    put:
       summary: Payment Review
       tags:
         - Payments
